--- a/src/sass/_toc.scss
+++ b/src/sass/_toc.scss
@@ -1,5 +1,5 @@
 main.eb-content {
-  article.eb-entry {
+  article.eb-entry-single {
     nav#TableOfContents{
       border: 1px solid #aaa;
       width: 350px;
